2006-03-07  Johan Bilien  <johan.bilien@nokia.com>

	* hildon-widgets/hildon-window.c: propagate key-press event to the
	  parent class (Closes N#23400)
	* configure.ac: 0.12.3

2006-03-06  Johan Bilien  <johan.bilien@nokia.com>

	* hildon-wizard-dialog.[ch]: Add page_change signal. Patch courtesy
	  of Artem Garmash 
	* configure.ac: 0.12.2

2006-03-02  Johan Bilien  <johan.bilien@nokia.com>

	* hildon-widgets/hildon-code-dialog.[ch], hildon-widgets/Makefile.am:
	  added HildonCodeDialog widget

2006-03-02  Johan Bilien  <johan.bilien@nokia.com>

	* hildon-widgets/hildon-window.c: 
	  - set the toolbar height explicitely
	  - use show instead of show_all on the common_toolbar
	  - add the toolbars bottom-up instead of top-down
	* hildon-widgets/hildon-program.c:
	  - don't assume that a window was realized when added to 
	    the program

2006-02-21  Luc Pionchon  <luc.pionchon@nokia.com>

        Added hildon-banner, as a clean replacement for gtk-infoprint
	* hildon-widgets/hildon-banner.[ch]: implementation and header	
	* hildon-widgets/Makefile.am: reference new files
	* hildon-widgets/gtk-infoprint.c: removed implementation, now just
	a compatibility wrapper to hildon-banner
	
2006-02-21  Luc Pionchon  <luc.pionchon@nokia.com>
	
	* hildon-widgets/hildon-color-button.c: added comments
	* hildon-widgets/hildon-controlbar.c: Likewise.
	* hildon-widgets/hildon-composite-widget.c: Likewise.
	* hildon-widgets/hildon-calendar-popup.c: Likewise.

2006-02-21  Luc Pionchon  <luc.pionchon@nokia.com>

	* ChangeLog-hildon-lgpl: copied from old hildon-lgpl/ChangeLog for
	reference

2006-02-21  Luc Pionchon  <luc.pionchon@nokia.com>

	* configure.ac: 0.12.1

2006-02-21  Johan Bilien  <johan.bilien@nokia.com>

	* doc/tmpl/hildon-program.sgml: added from hildon-lgpl HW branch
	* doc/tmpl/hildon-window.sgml: likewise.
	* hildon-widgets/hildon-program.[ch]: likewise.
	* hildon-widgets/hildon-window.[ch]: likewise.
	* hildon-widgets/hildon-window-private.h: likewise.