@@ -1,3 +1,8 @@
+2006-03-13  Johan Bilien  <johan.bilien@nokia.com>
+	* hildon-widgets/hildon-code-dialog.c:
+	  - Add default title
+	  - Fix l10n
+
 2006-03-07  Johan Bilien  <johan.bilien@nokia.com>
 
 	* hildon-widgets/hildon-window.c: propagate key-press event to the
